--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,19 @@ hr{
     border-color: gray;
  }
  h1 {
-    color: #66BFBF
+    color: #66BFBF;
 }
 h3{
-    color: #66BFBF
+    color: #66BFBF;
 
 }
 h1:hover{
-    Color: rgb(72, 228, 72)
+    Color: rgb(72, 228, 72);
 }
 h3:hover {
-    Color: rgb(72, 228, 72)
+    Color: rgb(72, 228, 72);
+}
+
+.star:hover {
+    color:red;
 }
